=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.021 - July 21, 2004

=over

=item *

Upped Apache timeout from 30 to 600.  30 seconds was too short to
preview some extremely large stories.  [Peter]

=item *

Errors writing to the filesystem while executing a preview/publish
through the Krang UI are now logged properly in C<logs/krang.log>.
Previously, they were only reported in user-friendly (as opposed to
admin-friendly) fashion to the UI.  [Peter]

=item *

Added indexes on the C<class> and C<published_version> columns in the
C<story> table.  This greatly speeds up searches against these fields.
[Sam]

=item *

Added new method C<use_category_templates()> to
L<Krang::ElementClass::TopLevel>.  This boolean method defaults to
true, and can be used to determine whether or not to wrap story output
in category templates. [Peter]

=item *

Fixed a bug which caused scheduler problems in upgraded Krang
installs.  Krang::Schedule::Daemon was missing code to reset
REMOTE_USER for each instance.  [Sam]

=item *

Added directory hashing to Krang::Media's XML serialization system.
This allows a single KDS file to contain any number of media files.
The previous limit was 32,000. [Sam]

=item *

Added C<no_parent> option to Krang::ListItem::find(). [Sam]

=item *

Fixed a bug in Krang::ListItem::find() which prevented C<ids_only>
from working. [Sam]

=item *

Added missing indexes to the list tables, providing an impressive
speedup in working on large lists. [Sam]

=item *

Fixed a bug that prevented Krang from installing on very recent MySQL
releases which do not tolerate trailing commas in C<CREATE TABLE>
statements. [Aaron Ross]

=item *

Added the ability to run Krang against a MySQL database on a different
machine.  There is a new configuration parameter, C<DBHost>, and a new
option to C<krang_install>, C<--DBHost>.  [Aaron Ross]

=item *

Fixed Krang::CGI::Publisher to not produce a nav-bar when preview